# eisenscript_to_xml

./: .gitignore  README.md  pyproject.toml  requirements.txt
blend-files/: default_xml.blend  default_xml.blend1  test-spiral.blend  test-spiral.blend1
eisenscript_to_xml/: __init__.py  eisenscript.lark  eisenscript_04.lark  eisenscript_05.lark  eisenscript_06.lark  eisenscript_to_xml.py  generative_art.py  lark_inter.py
examples/eisenscript/: Ball.es  abstract_shape.es
examples/xml/: Arc Sphere.xml  Ball.xml  BinaryKite.xml  City of Glass.xml  Default.xml  Frame In Frame.xml  Grinder.xml  Konstrukt.xml  Menger.xml  Moduli Creatures.xml  Mondrian.xml  Nabla.xml  NineWorthies.xml  Nouveau.xml  Nouveau2.xml  Nouveau3.xml  Octopod II.xml  Reflection.xml  RoundTree.xml  SpiralTree2D.xml  Synctor.xml  Thingy.xml  Torus2.xml  Torus3.xml
notebooks/: 00-does-it-work.ipynb  01-fix_grammar.ipynb  03-fix_grammar.ipynb  04-lark-example1.ipynb  05-lark-eisen.ipynb  05a-lark-eisen.ipynb  06-lark-examples.ipynb  08-lark-module.ipynb  09-translate-here.ipynb  call_new.html  call_old.html  eisenscript.lark  eisenscript_01.lark  eisenscript_02.lark  eisenscript_03.lark  eisenscript_04.lark  fern.xml  gss_matrices.py  lark_rule_parse.txt  ring_es.pov  ring_es2.gss  ring_test.blend  ring_test.blend1  ring_xml.gss  ring_xml2.gss  ring_xml3.gss  scraps.ipynb
notebooks/devel/: 00-does-it-work.ipynb  01-fix_grammar.ipynb  02-fix_grammar.ipynb  05-lark-eisen.ipynb  05b-lark-eisen.ipynb  07-ast-2-xml.ipynb
notebooks/xml_translate/: Arc Sphere.es.xml  Ball.es.xml  BinaryKite.es.xml  Default.es.xml  (+18 more)
tests/: test_eisenscript_to_xml.py  test_examples.py  test_short.py
(+4 files in other folders)
