[tool.poetry]
name = "eisenscript_to_xml"
version = "0.1.0"
description = ""
authors = ["elfnor <elfnor@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
ipykernel = "^6.9.2"
lark = "^1.1.2"
euclid = {git = "https://github.com/r1chardj0n3s/euclid.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
