[project]
name = "eisenscript_to_xml"
version = "0.1.0"
description = "translate eisenscript to xml format used in Sverchok"
authors = [{name = "elfnor",email = "elfnor@gmail.com"}]
readme = "README.md"
dependencies = [
    "lark>=1.1.9",
]
requires-python = ">=3.8,<4.0"


[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.2.2",
    "euclid @ git+https://github.com/r1chardj0n3s/euclid",
]

[tool.hatch]
[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["eisenscript_to_xml/lark_inter"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
